--- a/package.json
+++ b/package.json
@@ -2,7 +2,14 @@
   "name": "conFusion",
   "private": true,
   "devDependencies": {
-    "gulp-ng-annotate": "^2.0.0"
+    "gulp-ng-annotate": "^2.0.0",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^0.2.3",
+    "karma-jasmine": "^0.3.8",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "phantomjs": "^2.1.7",
+    "phantomjs-prebuilt": "^2.1.7"
   },
   "engines": {
     "node": ">=0.10.0"
